--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/chatFragment"
-        android:name="co.tractionapps.weatherapp.ui.fragment.HomeFragment"
+        android:name="co.favour.weatherapp.ui.fragment.HomeFragment"
         android:label="fragment_weather_home"
         tools:layout="@layout/fragment_home" />
 </navigation>
